--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,19 +1,18 @@
 .App {
   text-align: center;
+  background-color: #1b697a;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
   color: #61dafb;
 }
-
