--- a/src/ContentSections/Home/Methodology/Methodology.css
+++ b/src/ContentSections/Home/Methodology/Methodology.css
@@ -1,3 +1,8 @@
 .methodology-container {
-  background-color: aquamarine;
+  background-color: white;
+}
+
+.center {
+  margin: auto;
+  width: 100%;
 }
